test_regress/t/t_var_static_param.out
%Error-UNSUPPORTED: t/t_var_static_param.v:32:18: Unsupported: 'static' function/task variables
                                                : ... In instance t.subb
   32 |       static int st = 2; st += P; return st;
      |                  ^~
%Error: Exiting due to
